--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!--────────────────Header───────────────-->
 	<header>
 		<a class="logo" href="#home">
-              <img src="https://newsletter-images--timmy-i-chen.repl.co/logo-light.png" alt="Tim.Maik Logo" />
+              <img src="https://cdn.discordapp.com/attachments/1157317539924283505/1248638056756547594/7527-dimden-tudou-scratch-pfp-pfpsgg.gif?ex=6664644f&is=666312cf&hm=b665c8067fe667ad5c01f765aaafa44c8dffc12dfa0ca49dc991aced428d93cf&" alt="Tim.Maik Logo" />
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
