--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<li><a class="nav-link active" href="#home">Home</a></li>
 			<li><a class="nav-link" href="#projects">Projects</a></li>
 			<li><a class="nav-link" href="#contact">Contact</a></li>
+			 <li><p class="copyright">© 2024 Tim.Maik</p></li>
 		 </ul>
 			
 			<div class="hamburger">
