--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 		  <div class="work">
 		<!--───────────────card───────────────-->
 			<div class="card">
-			    <img class="work-img" src="https://images.unsplash.com/photo-1518611507436-f9221403cca2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1225&q=80">
-			    <a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
+			    <img class="work-img" src="https://cdn.discordapp.com/attachments/1157317539924283505/1249062745224253441/Bl4ck_20240523_225302_0000.png?ex=6665efd4&is=66649e54&hm=bea70281faf7a0cdb921c99b4924f5ecfbec915ce0eb63c0d235a9ab6f3f1535&">
+			    <a href="https://discord.com/invite/ZTT4UEbT74" target="_blank"> <!--Link to project-->
+				<div class="work-content">BL4CKCITY AD</div></a>
             </div>
 			<div class="card">
 			    <img class="work-img" src="https://images.unsplash.com/photo-1462642109801-4ac2971a3a51?ixlib=rb-1.2.1&auto=format&fit=crop&w=1266&q=80">
