--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 	</main>
 	  <footer class="copyright">© 2024 
-		  <a href="https://repl.it/@lilykhan" target="_blank"> Tim.Maik</a>
+		  <a href="https://discord.com/invite/ZTT4UEbT74" target="_blank"> Tim.Maik</a>
      </footer>
 	  
   </div>
