--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
+      <meta name="description" content="official website of Tim.Maik">
       <title>Tim.Maik | Portfolio </title>
       <link href="style.css" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
