--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!--────────────────Header───────────────-->
 	<header>
 		<a class="logo" href="#home">
-              <img src="&is=666312cf&hm=b665c8067fe667ad5c01f765aaafa44c8dffc12dfa0ca49dc991aced428d93cf&" alt="Tim.Maik Logo" />
+              <img 7527-dimden-tudou-scratch-pfp-pfpsgg.gif" alt="Tim.Maik Logo" />
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
