--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!--────────────────Header───────────────-->
 	<header>
 		<a class="logo" href="#home">
-              <img 7527-dimden-tudou-scratch-pfp-pfpsgg.gif" alt="Tim.Maik Logo" />
+              <img href="7527-dimden-tudou-scratch-pfp-pfpsgg.gif" alt="Tim.Maik Logo" />
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
