--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!--────────────────Header───────────────-->
 	<header>
 		<a class="logo" href="#home">
-              <img href="https://cdn.discordapp.com/attachments/1157317539924283505/1248638056756547594/7527-dimden-tudou-scratch-pfp-pfpsgg.gif?ex=6665b5cf&is=6664644f&hm=069b0c2e8a00c8d5793fd1b8729b146ed2fd53b158184cb195c2d47254683373&", alt="Tim.Maik Logo" />
+              <img src="7527-dimden-tudou-scratch-pfp-pfpsgg.gif" alt="Tim.Maik Logo" />
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
