--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
       <meta name="description" content="official website of Tim.Maik">
+      <meta name="image" content="7527-dimden-tudou-scratch-pfp-pfpsgg.gif">
       <title>Tim.Maik | Portfolio </title>
       <link href="style.css" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
