--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
       <meta name="description" content="official website of Tim.Maik">
-      <meta name="image" content="7527-dimden-tudou-scratch-pfp-pfpsgg.gif">
+      <meta name="image" content="https://cdn.discordapp.com/attachments/1157317539924283505/1248638056756547594/7527-dimden-tudou-scratch-pfp-pfpsgg.gif?ex=6665b5cf&is=6664644f&hm=069b0c2e8a00c8d5793fd1b8729b146ed2fd53b158184cb195c2d47254683373&">
       <title>Tim.Maik | Portfolio </title>
       <link href="style.css" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
