--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 			  <a href="#" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="#" target="_blank"><i class='fab fa-linkedin-in'></i></a>
 			  <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+			  <a href="#" target="_blank"><i class="fab fa-discord"></i></a>
 		    </div>
 			 
 		 </section> 
