--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 				    <div class="work-content">OWNER<br>BL4CKCITY AD</div></a>
             </div>
 			<div class="card">
-			    <img class="work-img" src="https://images.unsplash.com/photo-1462642109801-4ac2971a3a51?ixlib=rb-1.2.1&auto=format&fit=crop&w=1266&q=80">
-				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
+			    <img class="work-img" src="443b835e5b4b11119413292047c20144.png">
+				<a href="https://discord.gg/anyai" target="_blank"> <!--Link to project-->
+				<div class="work-content">MODERATOR<br>anyai</div></a>
             </div>
             <div class="card">
 			    <img class="work-img" src="https://images.unsplash.com/photo-1485815457792-d1a966f9bde0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
