--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		  <h3>Tim.Maik<hr></h3>
 		  <p>Short Description.</p>
 		  <p>Something more about yourself.</p>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+          <p>My name is Tim Maik and I am 18 years old and I really enjoy programming</p>
 			  
 		  <!--────social media links─────-->
 			 
