--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 			    <img class="work-img" src="443b835e5b4b11119413292047c20144.png">
 				<a href="https://discord.gg/anyai" target="_blank"> <!--Link to project-->
 				<div class="work-content">MODERATOR<br>anyai</div></a>
+				<button class="join-button">JOIN NOW</button>
             </div>
             <div class="card">
 			    <img class="work-img" src="https://images.unsplash.com/photo-1485815457792-d1a966f9bde0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
