--- a/index.html
+++ b/index.html
@@ -78,26 +78,26 @@
 				<div class="work-content">MODERATOR<br>anyai</div></a>
 				<button class="join-button">JOIN NOW</button>
             </div>
-            <div class="card">
+            <!--<div class="card">
 			    <img class="work-img" src="https://images.unsplash.com/photo-1485815457792-d1a966f9bde0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
-				<a href="" target="_blank"> <!--Link to project-->
+				<a href="" target="_blank">
 				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
-            </div>
-            <div class="card">
+            </div> -->
+            <!--<div class="card">
 			    <img class="work-img" src="https://images.unsplash.com/photo-1517842645767-c639042777db?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
-				<a href="" target="_blank"> <!--Link to project-->
+				<a href="" target="_blank"> 
 				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
-            </div> 
-			<div class="card">
+            </div> -->
+		<!--<div class="card">
 			    <img class="work-img" src="https://images.unsplash.com/photo-1535556116002-6281ff3e9f36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=781&q=80">
-				<a href="" target="_blank"> <!--Link to project-->
+				<a href="" target="_blank"> 
 				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
-            </div>
-			<div class="card">
+            </div> -->
+		<!--<div class="card">
 			    <img class="work-img" src="https://images.unsplash.com/photo-1483546416237-76fd26bbcdd1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
-				<a href="" target="_blank"> <!--Link to project-->
+				<a href="" target="_blank">
 				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
-            </div> 	  
+            </div> -->	  
 		  </div>
 		  </div>
 	  </div>
