--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		  <div class="work">
 		<!--───────────────card───────────────-->
 			<div class="card">
-			    <img class="work-img" src="https://cdn.discordapp.com/attachments/1157317539924283505/1249062745224253441/Bl4ck_20240523_225302_0000.png?ex=6665efd4&is=66649e54&hm=bea70281faf7a0cdb921c99b4924f5ecfbec915ce0eb63c0d235a9ab6f3f1535&">
+			    <img class="work-img" src="7527-dimden-tudou-scratch-pfp-pfpsgg.gif">
 			    <a href="https://discord.com/invite/ZTT4UEbT74" target="_blank"> <!--Link to project-->
 				    <div class="work-content">OWNER<br>BL4CKCITY AD</div></a>
 				<a href="https://discord.com/invite/ZTT4UEbT74"><button class="join-button">JOIN NOW</button></a>
