--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!--────────────────Header───────────────-->
 	<header>
 		<a class="logo" href="#home">
-              <img src="Bl4ck_20240523_225302_0000.png" alt="Tim.Maik Logo" />
+              <img src="7527-dimden-tudou-scratch-pfp-pfpsgg.gif" alt="Tim.Maik Logo" />
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
@@ -67,7 +67,7 @@
 		  <div class="work">
 		<!--───────────────card───────────────-->
 			<div class="card">
-			    <img class="work-img" src="7527-dimden-tudou-scratch-pfp-pfpsgg.gif">
+			    <img class="work-img" src="Bl4ck_20240523_225302_0000.png">
 			    <a href="https://discord.com/invite/ZTT4UEbT74" target="_blank"> <!--Link to project-->
 				    <div class="work-content">OWNER<br>BL4CKCITY AD</div></a>
 				<a href="https://discord.com/invite/ZTT4UEbT74"><button class="join-button">JOIN NOW</button></a>
