--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
-      <meta name="description" content="official website of Tim.Maik">
+      <meta name="description" content="official website of Tiz Official">
       <meta name="og:image" content="https://timmaik.one/7527-dimden-tudou-scratch-pfp-pfpsgg.gif">
-      <title>Tim.Maik | Portfolio </title>
+      <title>Tiz Official | Portfolio </title>
       <link href="style.css" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -25,7 +25,7 @@
 			<li><a class="nav-link active" href="#home">Home</a></li>
 			<li><a class="nav-link" href="#projects">Projects</a></li>
 			<li><a class="nav-link" href="#contact">Contact</a></li>
-			 <li><p class="copyright">© 2024 Tim.Maik</p></li>
+			 <li><p class="copyright">© 2024 Tiz Official</p></li>
 		 </ul>
 			
 			<div class="hamburger">
