--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
       <meta name="description" content="official website of Tiz Official">
-      <meta name="og:image" content="https://timmaik.one/7527-dimden-tudou-scratch-pfp-pfpsgg.gif">
+      <meta name="og:image" content="1728225699857.png">
       <title>Tiz Official | Portfolio </title>
       <link href="style.css" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
@@ -18,7 +18,7 @@
 		<!--────────────────Header───────────────-->
 	<header>
 		<a class="logo" href="#home">
-              <img src="7527-dimden-tudou-scratch-pfp-pfpsgg.gif" alt="Tim.Maik Logo" />
+              <img src="1728225699857.png" alt="Tiz Official Logo" />
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
