--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	  <div id="home">
 		 <div class="filter"></div>
 		 <section class="intro">
-		  <h3>Tim.Maik<hr></h3>
+		  <h3>Tiz Official<hr></h3>
 		  <p>Short Description.</p>
 		  <p>Something more about yourself.</p>
           <p>My name is Tim Maik and I am 18 years old and I really enjoy programming</p>
