--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			  <a href="#" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="#" target="_blank"><i class='fab fa-linkedin-in'></i></a>
 			  <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
-			  <a href="#" target="_blank"><i class="fab fa-discord"></i></a>
+			  <a href="https://discord.gg/qwdbhrjR9j" target="_blank"><i class="fab fa-discord"></i></a>
 		    </div>
 			 
 		 </section> 
@@ -67,15 +67,15 @@
 		  <div class="work">
 		<!--───────────────card───────────────-->
 			<div class="card">
-			    <img class="work-img" src="Bl4ck_20240523_225302_0000.png">
+			    <img class="work-img" src="1728225699857.png">
 			    <a href="https://discord.com/invite/ZTT4UEbT74" target="_blank"> <!--Link to project-->
-				    <div class="work-content">OWNER<br>BL4CKCITY AD</div></a>
-				<a href="https://discord.com/invite/ZTT4UEbT74"><button class="join-button">JOIN NOW</button></a>
+				    <div class="work-content">OWNER<br>Tiz Official</div></a>
+				<a href="https://discord.gg/qwdbhrjR9j"><button class="join-button">JOIN NOW</button></a>
             </div>
 			<div class="card">
 			    <img class="work-img" src="443b835e5b4b11119413292047c20144.png">
 				<a href="https://discord.gg/anyai" target="_blank"> <!--Link to project-->
-				<div class="work-content">MODERATOR<br>anyai</div></a>
+				<div class="work-content">ADMINISTRATOR<br>anyai</div></a>
 				<a href="https://discord.gg/anyai"><button class="join-button">JOIN NOW</button></a>
             </div>
             <!--<div class="card">
@@ -118,7 +118,7 @@
 
 	</main>
 	  <footer class="copyright">© 2024 
-		  <a href="https://discord.com/invite/ZTT4UEbT74" target="_blank"> Tim.Maik</a>
+		  <a href="https://discord.gg/qwdbhrjR9j" target="_blank"> Tiz Official</a>
      </footer>
 	  
   </div>
