--- a/index.html
+++ b/index.html
@@ -122,5 +122,6 @@
      </footer>
 	  
   </div>
+	    <div> <iframe src="https://discord.com/widget?id=1331370969582927892&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></div>
     </body>
 </html>
